--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -16,6 +16,17 @@ spring:
 
   datasource:
     driver-class-name: org.h2.Driver
-    url:
+    url: jdbc:h2:mem:testdb
     username: sa
     password:
+
+  redis:
+    host: localhost
+    port: 6379
+
+  jwt:
+    secret: aGVsbG8K
+
+scheduler:
+  scrap:
+    yahoo: "0 0 0 * * *"
